# ideoui

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  docker.md  garage.toml  pyproject.toml  server.py
backend/: cancellation.py  config.py  database.py  job_runner.py  job_state.py  json_helpers.py  main.py  models.py  prompts.py  provider_loader.py  restore_history.py  routes_history.py  routes_jobs.py  routes_session.py  routes_system.py  schemas.py  storage.py  utils.py  ws.py
backend/migrations/: env.py
backend/migrations/versions/: 353a1c22ec86_add_uuid_lineage.py  7f6c2a1d9e40_add_server_state.py  8dd7356e57d6_initial_schema.py  9e0721ecbdb5_add_system_settings_table.py  a1b2c3d4e5f6_add_previews_url.py  b3c4d5e6f7a8_add_editor_chain_head.py
backend/providers/: __init__.py  base.py  deepseek_provider.py  generic_provider.py  modal_provider.py
backend/providers/engines/: __init__.py  chat_engine.py  http_engine.py
config/: config.example.toml
config/providers/: _deepseek.toml  _modal.toml  diffusion_modal.example.toml  llm_deepseek.toml  llm_ideogram_magic.toml
config/upsample-prompts/: v1.txt  v2.txt  v3 (minimal).txt  v4 (full).txt  v5.txt
docs/: architecture.md  docker.md  engine.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: index.css  init.js  main.js
frontend/src/components/: ai-chat.js  app-root.js  bbox-canvas.js  control-panel.js  (+8 more)
static/: index.html
static/assets/: index-4gQD7jmq.js  index-CArIRk1E.js  index-CJQYs2lc.css  index-ClletBZL.js  index-uz6rmhdC.css
(+13 files in other folders)
